--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,8 @@ tensorflow >= 2.2
 keras >= 2.3.1
 imutils >= 0.5.3
 numpy >= 1.19
-opencv-python >= 4.2.0.*
+opencv-python >= 4.1
 matplotlib >= 3.2.1
+scipy>=1.4.1
+scikit-learn>=0.0
+seaborn >=0.11.1
